# wardnet

./: .dockerignore  .gitignore  .snyk  AGENTS.md  LICENSE  Makefile  README.md  SECURITY.md
source/daemon/: Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.base.dockerignore  Dockerfile.dockerignore  Dockerfile.test  Dockerfile.test.dockerignore  audit.toml  osv-scanner.toml  rust-toolchain.toml
source/daemon/.cargo/: audit.toml
source/daemon/.claude/agent-memory/rust-engineer/: MEMORY.md
source/daemon/build-support/: version.rs
source/daemon/crates/wardnet-common/: Cargo.toml
source/daemon/crates/wardnet-common/src/: api.rs  auth.rs  backup.rs  config.rs  device.rs  dhcp.rs  dns.rs  event.rs  jobs.rs  lib.rs  routing.rs  tunnel.rs  update.rs  vpn_provider.rs  wireguard_config.rs
source/daemon/crates/wardnet-common/src/tests/: auth.rs  config.rs  dhcp.rs  dns.rs  event.rs  mod.rs  routing.rs  tunnel.rs  vpn_provider.rs  wireguard_config.rs
source/daemon/crates/wardnet-test-agent/: Cargo.toml
source/daemon/crates/wardnet-test-agent/src/: container.rs  fixtures.rs  main.rs  models.rs
source/daemon/crates/wardnet-test-agent/src/client/: dhcp.rs  dns.rs  interfaces.rs  mod.rs  models.rs  ping.rs  routes.rs  serve.rs
source/daemon/crates/wardnet-test-agent/src/kernel/: mod.rs  tests.rs
source/daemon/crates/wardnet-test-agent/src/server/: mod.rs  models.rs
source/daemon/crates/wardnet-types/: Cargo.toml
source/daemon/crates/wardnet-types/src/: api.rs  auth.rs  device.rs  dhcp.rs  dns.rs  event.rs  lib.rs  routing.rs  tunnel.rs  vpn_provider.rs
source/daemon/crates/wardnet-types/src/tests/: api.rs  device.rs  dhcp.rs  dns.rs  event.rs  mod.rs  vpn_provider.rs
source/daemon/crates/wardnetd/: Cargo.toml  build.rs
source/daemon/crates/wardnetd-api/: Cargo.toml
source/daemon/crates/wardnetd-api/src/: lib.rs  openapi.rs  state.rs
source/daemon/crates/wardnetd-api/src/api/: auth.rs  devices.rs  dhcp.rs  dns.rs  info.rs  jobs.rs  logs_ws.rs  middleware.rs  mod.rs  providers.rs  setup.rs  system.rs  tunnels.rs  update.rs
source/daemon/crates/wardnetd-api/src/tests/: mod.rs  state.rs  stubs.rs
source/daemon/crates/wardnetd-data/: Cargo.toml  build.rs
source/daemon/crates/wardnetd-data/migrations/: 20260414000000_dns.sql  20260420120000_update_history.sql
source/daemon/crates/wardnetd-data/src/: bootstrap.rs  database_dumper.rs  db.rs  keys.rs  lib.rs  oui.rs  secret_store.rs
source/daemon/crates/wardnetd-data/src/repository/: admin.rs  api_key.rs  device.rs  dhcp.rs  dns.rs  mod.rs  session.rs  tunnel.rs  update.rs
source/daemon/crates/wardnetd-data/src/tests/: bootstrap.rs  database_dumper.rs  db.rs  keys.rs  mod.rs  oui.rs  secret_store.rs
source/daemon/crates/wardnetd-mock/: Cargo.toml
source/daemon/crates/wardnetd-mock/src/: events.rs  lib.rs  main.rs  seed.rs
source/daemon/crates/wardnetd-mock/src/backends/: mod.rs  noop_device.rs  noop_dhcp.rs  noop_dns.rs  noop_keys.rs  noop_routing.rs  noop_tunnel.rs
source/daemon/crates/wardnetd-mock/src/tests/: backends.rs  mod.rs  seed.rs
source/daemon/crates/wardnetd-services/: Cargo.toml  build.rs
source/daemon/crates/wardnetd-services/src/: auth_context.rs  command.rs  error.rs  event.rs  jobs.rs  keys.rs  lib.rs  request_context.rs
source/daemon/crates/wardnetd-services/src/auth/: mod.rs  service.rs
source/daemon/crates/wardnetd-services/src/backup/: archiver.rs  database_dumper.rs  mod.rs  runner.rs  service.rs
source/daemon/crates/wardnetd-services/src/device/: discovery.rs  hostname_resolver.rs  mod.rs  packet_capture.rs  service.rs
source/daemon/crates/wardnetd-services/src/dhcp/: mod.rs  runner.rs  server.rs  service.rs
source/daemon/crates/wardnetd-services/src/dns/: blocklist_downloader.rs  cache.rs  cron_parse.rs  filter.rs  filter_parser.rs  mod.rs  runner.rs  server.rs  service.rs
source/daemon/crates/wardnetd-services/src/logging/: component.rs  error_notifier.rs  mod.rs  service.rs  stream.rs
source/daemon/crates/wardnetd-services/src/routing/: mod.rs  policy_router.rs  service.rs
source/daemon/crates/wardnetd-services/src/system/: mod.rs  service.rs
source/daemon/crates/wardnetd-services/src/tests/: error.rs  event.rs  init.rs  jobs.rs  mod.rs  request_context.rs
source/daemon/crates/wardnetd-services/src/tunnel/: mod.rs  service.rs
source/daemon/crates/wardnetd-services/src/vpn/: mod.rs  nordvpn.rs  provider.rs  registry.rs  service.rs
source/daemon/crates/wardnetd/data/: oui.csv
source/daemon/crates/wardnetd/migrations/: 20260307000000_initial.sql  20260415000000_dns_blocklist_errors.sql
source/daemon/crates/wardnetd/src/: auth_context.rs  bootstrap.rs  command.rs  config.rs  db.rs  device_detector.rs  error.rs  firewall.rs  firewall_nftables.rs  hostname_resolver.rs  lib.rs  log_broadcast.rs  main.rs  metrics_collector.rs  noop_hostname_resolver.rs  noop_network.rs  noop_packet_capture.rs  oui.rs  packet_capture_noop.rs  packet_capture_pnet.rs  pidfile.rs  policy_router.rs  policy_router_iproute.rs  policy_router_netlink.rs  profiling.rs  recent_errors.rs  route_monitor.rs  routing_listener.rs  state.rs  tunnel_idle.rs  tunnel_interface.rs  tunnel_interface_wireguard.rs  tunnel_monitor.rs  version.rs  vpn_provider.rs  vpn_provider_nordvpn.rs  vpn_provider_registry.rs  web.rs
source/daemon/crates/wardnetd/src/api/: auth.rs  devices.rs  dhcp.rs  dns.rs  info.rs  logs_ws.rs  middleware.rs  mod.rs  providers.rs  setup.rs  system.rs  tunnels.rs
source/daemon/crates/wardnetd/src/dhcp/: mod.rs  runner.rs  server.rs
source/daemon/crates/wardnetd/src/dns/: filter.rs  filter_parser.rs  mod.rs  runner.rs  server.rs
source/daemon/crates/wardnetd/src/repository/: admin.rs  api_key.rs  device.rs  dhcp.rs  (+5 more)
source/daemon/crates/wctl/: Cargo.toml  build.rs
source/daemon/crates/wctl/src/: main.rs
source/daemon/examples/: docker-compose.yaml
source/daemon/fuzz/: Cargo.toml  rust-toolchain.toml
source/daemon/fuzz/fuzz_targets/: archiver_unpack.rs  bundle_manifest.rs  sqlite_restore.rs
source/daemon/packaging/test-agent/: wardnet-test-agent.service
(+426 files in other folders)
