[package]
name = "wardnetd-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
wardnet-common.workspace = true
wardnetd-data.workspace = true
wardnetd-services.workspace = true

# https://crates.io/crates/tokio
tokio.workspace = true
# https://crates.io/crates/axum
axum.workspace = true
# https://crates.io/crates/axum-extra
axum-extra.workspace = true
# https://crates.io/crates/tower
tower.workspace = true
# https://crates.io/crates/tower-http
tower-http.workspace = true
# https://crates.io/crates/rust-embed
rust-embed.workspace = true
# https://crates.io/crates/mime_guess
mime_guess.workspace = true
# https://crates.io/crates/serde
serde.workspace = true
# https://crates.io/crates/serde_json
serde_json.workspace = true
# https://crates.io/crates/uuid
uuid.workspace = true
# https://crates.io/crates/chrono
chrono.workspace = true
# https://crates.io/crates/tracing
tracing.workspace = true
# https://crates.io/crates/anyhow
anyhow.workspace = true
# https://crates.io/crates/utoipa
utoipa.workspace = true
# https://crates.io/crates/utoipa-axum
utoipa-axum.workspace = true
# https://crates.io/crates/utoipa-scalar
utoipa-scalar.workspace = true

[dev-dependencies]
# https://crates.io/crates/tokio
tokio = { workspace = true, features = ["test-util"] }
# https://crates.io/crates/async-trait
async-trait.workspace = true
# https://crates.io/crates/sqlx
sqlx.workspace = true
