[package]
name = "wardnetd-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
wardnet-common.workspace = true
wardnetd-data.workspace = true

# https://crates.io/crates/tokio
tokio.workspace = true
# https://crates.io/crates/tokio-util
tokio-util.workspace = true
# https://crates.io/crates/axum
axum.workspace = true
# https://crates.io/crates/tower
tower.workspace = true
# https://crates.io/crates/sqlx
sqlx.workspace = true
# https://crates.io/crates/serde
serde.workspace = true
# https://crates.io/crates/serde_json
serde_json.workspace = true
# https://crates.io/crates/uuid
uuid.workspace = true
# https://crates.io/crates/chrono
chrono.workspace = true
# https://crates.io/crates/tracing
tracing.workspace = true
# https://crates.io/crates/tracing-subscriber
tracing-subscriber.workspace = true
# https://crates.io/crates/argon2
argon2.workspace = true
# https://crates.io/crates/password-hash
password-hash.workspace = true
# https://crates.io/crates/anyhow
anyhow.workspace = true
# https://crates.io/crates/thiserror
thiserror.workspace = true
# https://crates.io/crates/async-trait
async-trait.workspace = true
# https://crates.io/crates/base64
base64.workspace = true
# https://crates.io/crates/sha2
sha2.workspace = true
# https://crates.io/crates/hex
hex.workspace = true
# https://crates.io/crates/rand
rand.workspace = true
# https://crates.io/crates/reqwest
reqwest.workspace = true
# https://crates.io/crates/ipnetwork
ipnetwork.workspace = true
# https://crates.io/crates/sysinfo
sysinfo.workspace = true
# https://crates.io/crates/cron
cron.workspace = true
# https://crates.io/crates/regex
regex.workspace = true
# https://crates.io/crates/hickory-proto
hickory-proto.workspace = true
# https://crates.io/crates/semver — version comparison for auto-update
semver.workspace = true
# https://crates.io/crates/minisign-verify — signature verification for release tarballs
minisign-verify.workspace = true
# https://crates.io/crates/flate2 — gzip for release tarballs and backup bundles
flate2.workspace = true
# https://crates.io/crates/tar — tar layer for release artefacts and backup bundles
tar.workspace = true
# https://crates.io/crates/age — symmetric passphrase encryption for backup bundles
age.workspace = true

[dev-dependencies]
# https://crates.io/crates/tokio
tokio = { workspace = true, features = ["test-util"] }
