[package]
name = "wardnetd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
wardnet-types.workspace = true

# https://crates.io/crates/tokio
tokio.workspace = true
# https://crates.io/crates/axum
axum.workspace = true
# https://crates.io/crates/axum-extra
axum-extra.workspace = true
# https://crates.io/crates/sqlx
sqlx.workspace = true
# https://crates.io/crates/tower
tower.workspace = true
# https://crates.io/crates/tower-http
tower-http.workspace = true
# https://crates.io/crates/rust-embed
rust-embed.workspace = true
# https://crates.io/crates/toml
toml.workspace = true
# https://crates.io/crates/serde
serde.workspace = true
# https://crates.io/crates/serde_json
serde_json.workspace = true
# https://crates.io/crates/uuid
uuid.workspace = true
# https://crates.io/crates/chrono
chrono.workspace = true
# https://crates.io/crates/tracing
tracing.workspace = true
# https://crates.io/crates/tracing-subscriber
tracing-subscriber.workspace = true
# https://crates.io/crates/tracing-appender
tracing-appender.workspace = true
# https://crates.io/crates/argon2
argon2.workspace = true
# https://crates.io/crates/anyhow
anyhow.workspace = true
# https://crates.io/crates/thiserror
thiserror.workspace = true
# https://crates.io/crates/rand
rand.workspace = true
# https://crates.io/crates/base64
base64.workspace = true
# https://crates.io/crates/sha2
sha2.workspace = true
# https://crates.io/crates/hex
hex.workspace = true
# https://crates.io/crates/mime_guess
mime_guess.workspace = true
# https://crates.io/crates/async-trait
async-trait.workspace = true
# https://crates.io/crates/clap
clap.workspace = true
# https://crates.io/crates/wireguard-control
wireguard-control.workspace = true
# https://crates.io/crates/ipnetwork
ipnetwork.workspace = true
# https://crates.io/crates/tokio-util
tokio-util.workspace = true
# https://crates.io/crates/pnet
pnet.workspace = true
# https://crates.io/crates/sysinfo
sysinfo.workspace = true
# https://crates.io/crates/opentelemetry
opentelemetry.workspace = true
# https://crates.io/crates/opentelemetry_sdk
opentelemetry_sdk.workspace = true
# https://crates.io/crates/opentelemetry-otlp
opentelemetry-otlp.workspace = true
# https://crates.io/crates/tracing-opentelemetry
tracing-opentelemetry.workspace = true
# https://crates.io/crates/opentelemetry-appender-tracing
opentelemetry-appender-tracing.workspace = true
