[package]
name = "wardnetd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
wardnet-common.workspace = true
wardnetd-api.workspace = true
wardnetd-services.workspace = true

# https://crates.io/crates/tokio
tokio.workspace = true
# https://crates.io/crates/axum
axum.workspace = true
# https://crates.io/crates/tower
tower.workspace = true
# https://crates.io/crates/toml
toml.workspace = true
# https://crates.io/crates/serde
serde.workspace = true
# https://crates.io/crates/serde_json
serde_json.workspace = true
# https://crates.io/crates/uuid
uuid.workspace = true
# https://crates.io/crates/chrono
chrono.workspace = true
# https://crates.io/crates/tracing
tracing.workspace = true
# https://crates.io/crates/tracing-subscriber
tracing-subscriber.workspace = true
# https://crates.io/crates/tracing-appender
tracing-appender.workspace = true
# https://crates.io/crates/anyhow
anyhow.workspace = true
# https://crates.io/crates/async-trait
async-trait.workspace = true
# https://crates.io/crates/reqwest
reqwest.workspace = true
# https://crates.io/crates/clap
clap.workspace = true
# https://crates.io/crates/wireguard-control
wireguard-control.workspace = true
# https://crates.io/crates/ipnetwork
ipnetwork.workspace = true
# https://crates.io/crates/tokio-util
tokio-util.workspace = true
# https://crates.io/crates/pnet
pnet.workspace = true
# https://crates.io/crates/sysinfo
sysinfo.workspace = true
# https://crates.io/crates/dhcproto
dhcproto.workspace = true
# https://crates.io/crates/opentelemetry
opentelemetry.workspace = true
# https://crates.io/crates/opentelemetry_sdk
opentelemetry_sdk.workspace = true
# https://crates.io/crates/opentelemetry-otlp
opentelemetry-otlp.workspace = true
# https://crates.io/crates/tracing-opentelemetry
tracing-opentelemetry.workspace = true
# https://crates.io/crates/opentelemetry-appender-tracing
opentelemetry-appender-tracing.workspace = true
# https://crates.io/crates/pyroscope
pyroscope.workspace = true
# https://crates.io/crates/hickory-proto
hickory-proto.workspace = true
# https://crates.io/crates/hickory-resolver
hickory-resolver.workspace = true
# https://crates.io/crates/futures
futures.workspace = true
# https://crates.io/crates/rtnetlink
rtnetlink.workspace = true
# https://crates.io/crates/netlink-packet-route
netlink-packet-route.workspace = true
# https://crates.io/crates/netlink-sys
netlink-sys.workspace = true
# https://crates.io/crates/regex
regex.workspace = true
# https://crates.io/crates/cron
cron.workspace = true

[dev-dependencies]
# https://crates.io/crates/tokio
tokio = { workspace = true, features = ["test-util"] }
# https://crates.io/crates/tempfile
tempfile.workspace = true
